<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="th.in.pnnutkung.helloworld.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatch_lab"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatch_lab"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:text="@string/tv_result" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_calculate" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/checkbox_agree" />

            <RadioGroup
                android:id="@+id/rbGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rbPlus"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_btn_plus" />

                <RadioButton
                    android:id="@+id/rbMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/radio_btn_margin_start"
                    android:text="@string/radio_btn_minus" />

                <RadioButton
                    android:id="@+id/rbMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_btn_multiply" />

                <RadioButton
                    android:id="@+id/rbDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_btn_divide" />
            </RadioGroup>

            <ProgressBar
                style="@style/ProgressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <include layout="@layout/sample_bar" />

            <th.in.pnnutkung.helloworld.CustomViewGroup
                android:id="@+id/viewGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <th.in.pnnutkung.helloworld.CustomViewGroup
                android:id="@+id/viewGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_spotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#7ab800"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_fontIconResource="&#xf04b;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="SHUFFLE PLAY"
                fancy:fb_textColor="#FFFFFF" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <th.in.pnnutkung.helloworld.CustomView
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="160dp" />

            <th.in.pnnutkung.helloworld.CustomView
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:isBlue="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/selector_btn_default"
                    android:contentDescription="@string/iv_describtion"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" />

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/iv_describtion"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
